INT-17940: Fix icons styling and alignment for the card setting for tiles format

--- a/scss/_plugins.scss
+++ b/scss/_plugins.scss
@@ -906,21 +906,105 @@ section#snap-add-new-section #summary-editor_parent #summary-editor_tbl {
 /**
  * Tiles course format.
  */
-// List view.
 #page-course-view-tiles {
+    // Styles for Dashboard, progress indicator and edit course content link.
     #headerabovetiles {
         & > div:nth-child(1) {
             float: left;
         }
         div.progress-indic {
             float: right;
-            @media (max-width: 365px) {
-                & > div:nth-child(1) {
-                    display: none;
-                }
+        }
+        @media (max-width: 600px) and (min-width: 377px) {
+            #snap-editmode-header {
+                float: none;
+            }
+            div.progress-indic {
+                padding-top: 1.5em;
             }
         }
     }
+
+    @media (max-width: 600px) {
+        #abovetiles {
+            min-height: 90px;
+        }
+    }
+
+    @media (max-width: 376px) {
+        #snap-course-dashboard {
+            padding-left: 1.5rem;
+            padding-bottom: 1.5rem;
+        }
+        #snap-editmode-header {
+            float: left;
+        }
+        div.progress-indic {
+            padding-top: 0;
+        }
+        div.progress-indic > div:nth-child(1) {
+            display: none;
+        }
+    }
+
+    .edit-course-content {
+        float: right;
+        i.icon:before {
+            color: white;
+        }
+    }
+
+    #abovetiles .expand-collapse-all-btns {
+
+    }
+
+    // Dashboard styles.
+    #coursetools-header-tiles {
+        display: flex;
+        justify-content: space-between;
+        i.fa-home {
+            color: $brand-primary;
+        }
+    }
+
+    // Sections styles.
+    #changenumsections a.pull-right {
+        color: #fff;
+        background-color: $brand-primary;
+        border: 1px solid transparent;
+        padding: 0.375rem 0.75rem;
+        margin-top: 0 !important;
+        font-size: 1rem;
+        line-height: 1.5;
+        border-radius: 0.25rem;
+        i.fa-plus {
+            color: white;
+        }
+        &:hover {
+            text-decoration: none;
+            background-color: darken($brand-primary, 10%);
+            border-color: darken($brand-primary, 10%);
+            outline: 3px auto $brand-primary;
+        }
+    }
+
+    #single_section_tiles {
+        i.fa-chevron-left,
+        i.fa-chevron-right,
+        i.fa-home {
+            color: $brand-primary;
+        }
+    }
+
+    li.section .inplaceeditable  .quickeditlink {
+        &:focus,
+        &:active {
+            background-color: transparent;
+            box-shadow: none;
+        }
+    }
+
+    // List view.
     .course-content ul.section.nosubtiles {
         li.activity {
             padding-bottom: 1.3em;
@@ -964,39 +1048,39 @@ section#snap-add-new-section #summary-editor_parent #summary-editor_tbl {
             }
         }
     }
-    #single_section_tiles {
-        i.fa-chevron-left,
-        i.fa-chevron-right,
-        i.fa-home {
-            color: $brand-primary;
-        }
-    }
-    // While on editing mode.
+
+    // While on editing mode for list view.
     &.editing {
-        li.activity {
-            @media (max-width: 390px) {
-                .mod-indent-outer a:first-of-type {
-                    max-width: 80px;
+        ul.section.nosubtiles {
+            li.activity {
+                @media (max-width: 390px) {
+                    .mod-indent-outer a:first-of-type {
+                        max-width: 80px;
+                    }
                 }
-            }
-            .actions {
-                background-color: transparent;
-                margin-top: 0;
-                .moodle-actionmenu {
-                    margin-right: 0.8em;
-                }
-                .completioncheckbox span.completion-icon {
-                    top: 2px;
-                }
-                @media (max-width: 768px) {
-                    .completioncheckbox .completion-icon {
-                        top: 0 !important;
-                        width: 20px;
-                        height: 20px;
+                .actions {
+                    background-color: transparent;
+                    margin-top: 0;
+                    .moodle-actionmenu {
+                        margin-right: 0.8em;
+                    }
+                    .completioncheckbox span.completion-icon {
+                        top: 2px;
+                    }
+                    @media (max-width: 768px) {
+                        .completioncheckbox .completion-icon {
+                            top: 0 !important;
+                            width: 20px;
+                            height: 20px;
+                        }
                     }
                 }
             }
         }
+    }
+
+    // Editing mode for general items.
+    &.editing {
         .section-modchooser-link.btn.btn-link {
             color: #fff;
             background-color: $brand-primary;
@@ -1020,31 +1104,36 @@ section#snap-add-new-section #summary-editor_parent #summary-editor_tbl {
             padding-bottom: 1em !important;
         }
     }
-    // Dashboard styles.
-    #coursetools-header-tiles {
-        display: flex;
-        justify-content: space-between;
-        i.fa-home {
-            color: $brand-primary;
+
+    // Card view.
+    .course-content ul.section.subtiles {
+        .subtile_inner {
+            position: relative;
+            padding: 0 16px 0 0;
+        }
+        .actions {
+            right: 0;
+            display: flex;
         }
     }
-    #changenumsections a.pull-right {
-        color: #fff;
-        background-color: $brand-primary;
-        border: 1px solid transparent;
-        padding: 0.375rem 0.75rem;
-        margin-top: 0 !important;
-        font-size: 1rem;
-        line-height: 1.5;
-        border-radius: 0.25rem;
-        i.fa-plus {
-            color: white;
-        }
-        &:hover {
-            text-decoration: none;
-            background-color: darken($brand-primary, 10%);
-            border-color: darken($brand-primary, 10%);
-            outline: 3px auto $brand-primary;
+
+    // While on editing mode for card view.
+    &.editing {
+        ul.section.subtiles {
+            .subtile_inner {
+                .editing_move {
+                    top: 5px;
+                }
+                .activitytype {
+                    margin-top: 1em;
+                }
+            }
+            .actions {
+                background-color: transparent;
+                .action-menu {
+                    margin-right: 0.5em;
+                }
+            }
         }
     }
 }
